--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,91 @@
+* {
+  margin: 0;
+  box-sizing: border-box;
+  font-family: sans-serif;
+  font-size: 0.8rem;
+  color: var(--body-text);
+}
+
+a {
+  text-decoration: none;
+}
+a:hover {
+  color: var(--orange-hl);
+}
+
+h1 {
+  font-size: 1.8rem;
+  margin-bottom: 10px;
+}
+
+h2 {
+  font-size: 1.4rem;
+  margin-bottom: 8px;
+}
+
+h3 {
+  font-size: 1.2rem;
+  margin-bottom: 8px;
+}
+/* .h3span {
+  font-size: 1rem;
+  font-weight: 100;
+} */
+
+p {
+  font-size: 1rem;
+}
+
+ul {
+  list-style: none;
+  padding-left: 0;
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  display: grid;
+  /* place-content: center; */
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  height: 100vh;
+  background-color: palegoldenrod;
 }
 
-.App-link {
-  color: #61dafb;
+.container {
+  display: grid;
+  grid-template-rows: 50px 100px 1fr 50px;
+  width: 600px;
+  background-color: palegreen;
 }
 
-@keyframes App-logo-spin {
+/* NAV TOP  */
+
+.nav-header {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  background-color: aliceblue;
+}
+
+/* NAV MAIN  */
+
+.nav-main {
+  background-color: peachpuff;
+}
+
+/* .nav-list {
+  display: grid;
+  grid-template-columns: ;
+} */
+
+/* FOOTER  */
+
+.footer {
+  background-color: aliceblue;
+}
+
+/* @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
   to {
     transform: rotate(360deg);
   }
-}
+} */
