--- a/src/App.css
+++ b/src/App.css
@@ -174,6 +174,33 @@ button {
   width: 80px;
 }
 
+/* DASHBOARD */
+
+.policy-card {
+  margin-bottom: 10px;
+  border: 1px solid var(--grey);
+  border-radius: 10px;
+  padding: 10px;
+}
+
+.policy-main {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  border-top: 1px solid var(--grey);
+  border-bottom: 1px solid var(--grey);
+  padding: 10px 15px;
+}
+
+.policy-details {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+.policy-card-nav {
+  text-align: right;
+  padding: 10px 0;
+}
+
 /* FOOTER  */
 
 .footer {
