--- a/src/App.css
+++ b/src/App.css
@@ -128,6 +128,7 @@ button {
   /* border: solid 1px var(--blue-hl); */
   background-color: var(--offwhite);
   width: 100%;
+  padding: 20px 0px;
 }
 
 /* NAV TOP  */
@@ -175,17 +176,27 @@ button {
 
 .assets-list {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(100px, 120px));
+  grid-template-columns: repeat(auto-fit, minmax(120px, 150px));
   gap: 20px;
 }
 
 .asset-card {
   display: grid;
   place-content: center;
-  border: solid 1px var(--blue-hl);
+  border: solid 1px var(--grey);
   border-radius: 10px;
   background-color: white;
   padding: 10px 0;
+}
+
+.asset-card:hover {
+  border: solid 1px var(--blue-hl);
+  background-color: white;
+}
+
+.asset-card:active {
+  border: solid 1px var(--blue-ll);
+  background-color: #e1f3ff;
 }
 
 .asset-img {
@@ -207,6 +218,24 @@ button {
 
 .nav-assets .tab {
   width: 80px;
+}
+
+/* CREATE ACCOUNT MULTISTEP  */
+.createAccount-form {
+  display: grid;
+  place-content: center;
+  margin: 10% 20%;
+  padding: 5% 10%;
+  background-color: white;
+  border: 1px solid var(--grey);
+  border-radius: 30px;
+}
+
+.createAccount-form input {
+  border: 1px solid var(--blue-hl);
+  padding: 5px 10px;
+
+  border-radius: 30px;
 }
 
 /* DASHBOARD */
