--- a/src/App.css
+++ b/src/App.css
@@ -259,12 +259,29 @@ button {
   border: 1px solid var(--grey);
   width: 100px;
 }
+
+.createAccount-form .backBtn:hover {
+  color: var(--blue-ll);
+}
+
+.createAccount-form .backBtn:active {
+  border: 1px solid var(--blue-ll);
+}
+
 .createAccount-form .nextBtn {
   text-align: center;
   background-color: var(--blue-hl);
   padding: 8px 11px;
   border-radius: 30px;
   width: 100px;
+}
+
+.createAccount-form .nextBtn:hover {
+  color: white;
+}
+
+.createAccount-form .nextBtn:active {
+  opacity: 80%;
 }
 
 /* DASHBOARD */
